--- a/src/main/resources/org/jlereback/knitknot/popupView.fxml
+++ b/src/main/resources/org/jlereback/knitknot/popupView.fxml
@@ -1,14 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.Spinner?>
-<?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.VBox?>
+<?import javafx.geometry.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
 <?import javafx.scene.text.Font?>
-
-<?import javafx.scene.control.TextField?>
 <VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="229.0" minWidth="200.0" prefHeight="229.0" prefWidth="200.0"
 	  xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.jlereback.knitknot.PopupController">
 	<padding>
@@ -32,11 +27,11 @@
 			<Insets bottom="5.0" top="5.0"/>
 		</VBox.margin>
 		<Label prefHeight="24.0" prefWidth="96.0" text="Maskor höjd"/>
-		<Spinner fx:id="rowSpinner" prefHeight="11.0" prefWidth="58.0" initialValue="50" amountToStepBy="2.0" editable="true" max="500.0" min="30.0"/>
+		<Spinner fx:id="rowSpinner" prefHeight="11.0" prefWidth="58.0" initialValue="80" amountToStepBy="2.0" editable="true" max="500.0" min="30.0"/>
 	</HBox>
 	<HBox prefHeight="23.0" prefWidth="180.0">
 		<Label prefHeight="24.0" prefWidth="96.0" text="Maskor bredd"/>
-		<Spinner fx:id="columnSpinner" prefHeight="11.0" prefWidth="58.0" initialValue="50" amountToStepBy="2.0" editable="true" max="500.0" min="30.0"/>
+		<Spinner fx:id="columnSpinner" prefHeight="11.0" prefWidth="58.0" initialValue="10" amountToStepBy="2.0" editable="true" max="500.0" min="30.0"/>
 	</HBox>
 	<HBox prefHeight="31.0" prefWidth="77.0">
 		<VBox.margin>
