--- a/src/main/resources/org/jlereback/knitknot/view.fxml
+++ b/src/main/resources/org/jlereback/knitknot/view.fxml
@@ -1,26 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.canvas.Canvas?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.CheckMenuItem?>
-<?import javafx.scene.control.ChoiceBox?>
-<?import javafx.scene.control.ColorPicker?>
-<?import javafx.scene.control.Menu?>
-<?import javafx.scene.control.MenuBar?>
-<?import javafx.scene.control.MenuItem?>
-<?import javafx.scene.control.SeparatorMenuItem?>
-<?import javafx.scene.control.Spinner?>
-<?import javafx.scene.control.ToggleButton?>
-<?import javafx.scene.control.ToggleGroup?>
-<?import javafx.scene.control.ToolBar?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.BorderPane?>
-<?import javafx.scene.layout.ColumnConstraints?>
-<?import javafx.scene.layout.GridPane?>
-<?import javafx.scene.layout.RowConstraints?>
-<?import javafx.scene.layout.VBox?>
-
-<?import org.jlereback.knitknot.tools.ResizableCanvas?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
 <BorderPane minHeight="300.0" minWidth="350.0" nodeOrientation="LEFT_TO_RIGHT" prefHeight="450.0" prefWidth="550.0"
 			xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1"
 			fx:controller="org.jlereback.knitknot.Controller">
@@ -72,14 +53,8 @@
 	</top>
 	<center>
 		<AnchorPane BorderPane.alignment="TOP_LEFT">
-			<GridPane fx:id="grid" gridLinesVisible="true" AnchorPane.bottomAnchor="5.0" AnchorPane.leftAnchor="5.0"
+			<GridPane fx:id="grid" gridLinesVisible="false" AnchorPane.bottomAnchor="5.0" AnchorPane.leftAnchor="5.0"
 					  AnchorPane.rightAnchor="5.0" AnchorPane.topAnchor="5.0">
-				<AnchorPane BorderPane.alignment="TOP_LEFT" GridPane.columnSpan="2147483647" GridPane.halignment="LEFT"
-							GridPane.rowSpan="2147483647" GridPane.valignment="TOP">
-					<ResizableCanvas fx:id="paintingArea" AnchorPane.bottomAnchor="0" AnchorPane.leftAnchor="0"
-									 AnchorPane.rightAnchor="0" AnchorPane.topAnchor="0" onMouseClicked="#canvasClicked"
-									 onMouseDragged="#shapeClicked"/>
-				</AnchorPane>
 				<columnConstraints>
 					<ColumnConstraints/>
 				</columnConstraints>
